--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,17 @@
 
 <html>
 	<head>
-		<title></title>
+		<title>CRM</title>
+
+		<link rel="stylesheet" type="text/css" href="../assets/css/material.min.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
+
+		<meta charset="utf-8">
 	</head>
 
 	<body>
-		<p>yo mah dude, this a test</p>
+		<p>That CRM tho</p>
+
+		<script type="text/javascript" src="../script/library/material.min.js"></script>
 	</body>
 </html>
